--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -13,4 +13,4 @@ jobs:
       with:
         repo-token: ${{ secrets.GITHUB_TOKEN }}
         issue-message: "Welcome to our Java Notes we appereciate your contribution which makes this repo better please free to add new things' first issue"
-        pr-message: "Message that will be displayed on users' first pull request"
+        pr-message: "Shazaam..... You done it we are updating right now' first pull request"
